k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: foodbilling-service
spec:
  selector:
    app: foodbilling
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
